<resources>
    <string name="app_name">Project1</string>
    <string name="this_is_an_orange_textview">This is an orange TextView</string>
    <string name="this_is_a_green_textview">This is a green TextView</string>
    <string name="this_is_a_blue_textview">This is a blue TextView</string>
    <string name="this_is_a_button">This is a button</string>
    <string name="this_is_a_green_button">This is a green button</string>
    <string name="this_is_an_edittext">This is an EditText</string>
    <string name="this_is_a_new_edittext">This is a new EditText</string>
    <string name="auto_backup">Auto backup</string>
    <string name="notify_me">Notify me :)</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
</resources>
