<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="0dp"
            android:layout_height="150dp"
            android:layout_weight="1"
            android:background="@color/orange"
            android:gravity="center"
            android:text="@string/this_is_an_orange_textview"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="150dp"
            android:layout_weight="1"
            android:background="@color/green"
            android:gravity="center"
            android:text="@string/this_is_a_green_textview"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="150dp"
            android:layout_weight="1"
            android:background="@color/blue"
            android:gravity="center"
            android:text="@string/this_is_a_blue_textview"
            android:textColor="@color/white"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:layout_width="0dp"
            android:layout_height="136dp"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:background="@color/blue"
            android:text="@string/this_is_a_button"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <ImageView
            android:layout_width="0dp"
            android:layout_height="136dp"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:scaleType="centerInside"
            android:src="@drawable/colors" />

        <Button
            android:layout_width="0dp"
            android:layout_height="136dp"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:background="@color/green_button"
            android:text="@string/this_is_a_green_button"
            android:textColor="@color/black"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/yellow"
        android:orientation="vertical"
        android:paddingTop="32dp"
        android:paddingBottom="32dp">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/this_is_an_edittext"
            android:inputType="text" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/this_is_a_new_edittext"
            android:inputType="text" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/blue"
        android:orientation="horizontal">

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:paddingRight="128dp"
            android:text="@string/notify_me" />

        <Switch
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:text="@string/auto_backup"/>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="4dp"
        android:background="@color/gray" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/blue"
        android:orientation="vertical">

        <RatingBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:isIndicator="false"
            android:numStars="5"
            android:rating="4"
            android:stepSize="1" />

        <View
            android:layout_width="match_parent"
            android:layout_height="4dp"
            android:background="@color/gray" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/yes" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no" />
        </RadioGroup>
    </LinearLayout>
</LinearLayout>
